<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/cheese" />

    <TextView
        android:id="@+id/countValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/countLabel"
        app:layout_constraintEnd_toEndOf="@+id/mouseCountBar"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/mouseCountBar" />

    <TextView
        android:id="@+id/speedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/speedLabel"
        app:layout_constraintEnd_toEndOf="@+id/speedBar"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/speedBar" />

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/mouseCountBar"
        app:layout_constraintStart_toStartOf="@+id/mouseCountBar" />

    <TextView
        android:id="@+id/speedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/speed"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/speedBar"
        app:layout_constraintStart_toStartOf="@+id/speedBar" />

    <com.google.android.material.slider.Slider
        android:id="@+id/mouseCountBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:stepSize="1"
        android:value="3"
        android:valueFrom="1"
        android:valueTo="5"
        app:layout_constraintEnd_toEndOf="@+id/sizeBar"
        app:layout_constraintStart_toStartOf="@+id/sizeBar"
        app:layout_constraintTop_toBottomOf="@+id/sizeBar"
        app:thumbColor="@color/black"
        app:thumbHeight="20dp"
        app:tickColor="@color/white"
        app:trackColor="@color/cheese" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/start"
        app:backgroundTint="@color/cheese"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mouseCountBar"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/speedBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:stepSize="0.1"
        android:value="1"
        android:valueFrom="0.5"
        android:valueTo="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:thumbColor="@color/black"
        app:thumbHeight="20dp"
        app:tickColor="@color/white"
        app:trackColor="@color/cheese" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sizeBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:stepSize="0.1"
        android:value="1"
        android:valueFrom="0.5"
        android:valueTo="1.5"
        app:layout_constraintEnd_toEndOf="@+id/speedBar"
        app:layout_constraintStart_toStartOf="@+id/speedBar"
        app:layout_constraintTop_toBottomOf="@+id/speedBar"
        app:thumbColor="@color/black"
        app:thumbHeight="20dp"
        app:tickColor="@color/white"
        app:trackColor="@color/cheese" />

    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sizeBar"
        app:layout_constraintStart_toStartOf="@+id/sizeBar" />

    <TextView
        android:id="@+id/sizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/sizeLabel"
        app:layout_constraintEnd_toEndOf="@+id/sizeBar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/sizeBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/statsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:src="@drawable/statistics_svgrepo_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>